--- a/policy.html
+++ b/policy.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>Globzio</title>
+    <title>Honey Adventure Puzzle</title>
     <link rel="icon" href="img/500x500.png" />
 
     <link rel="stylesheet" type="text/css" href="slick/slick.css" />
@@ -12,87 +12,83 @@
   </head>
 
   <body>
-    <header class="y-k-header">
-      <div class="y-k-header-background"></div>
-      <nav class="y-k-navigation">
-        <ul class="y-k-navigation-list">
-          <li class="y-k-navigation-item">
-            <a href="/" class="y-k-navigation-link">
+    <header class="y-l-header">
+      <div class="y-l-header-background"></div>
+      <nav class="y-l-navigation">
+        <ul class="y-l-navigation-list">
+          <li class="y-l-navigation-item">
+            <a href="/" class="y-l-navigation-link">
               <img
                 href="/"
-                class="y-k-title-img y-k-navigation-img"
+                class="y-l-title-img y-l-navigation-img"
                 alt="logo"
                 src="img/Logo.png"
                 style="width: 44px"
               />
             </a>
           </li>
-          <li class="y-k-navigation-item">
-            <a href="/" class="y-k-navigation-link">Home</a>
+          <li class="y-l-navigation-item">
+            <a href="/" class="y-l-navigation-link">Home</a>
+          </li>
+          <li class="y-l-navigation-item">
+            <a href="/#why" class="y-l-navigation-link">About</a>
+          </li>
+          <li class="y-l-navigation-item">
+            <a href="/#about" class="y-l-navigation-link">Games</a>
           </li>
 
-          <li class="y-k-navigation-item">
-            <a href="/#why" class="y-k-navigation-link">Journal</a>
+          <li class="y-l-navigation-item">
+            <a href="/#uniqueness" class="y-l-navigation-link">Cozy Blog</a>
           </li>
-
-          <li class="y-k-navigation-item">
-            <a href="/#uniqueness" class="y-k-navigation-link">Map</a>
+          <li class="y-l-navigation-item">
+            <a href="/#how" class="y-l-navigation-link">Downloads</a>
           </li>
-          <li class="y-k-navigation-item">
-            <a href="/#how" class="y-k-navigation-link">Esports</a>
-          </li>
-          <li class="y-k-navigation-item">
-            <a href="/#faq" class="y-k-navigation-link">Features</a>
-          </li>
-
-          <li class="y-k-navigation-item">
-            <a href="/#community" class="y-k-navigation-link">Connect</a>
-          </li>
-          <li class="y-k-navigation-item">
-            <a href="/#reviews" class="y-k-navigation-link">About</a>
-          </li>
-          <li class="y-k-navigation-item">
-            <a href="/#join" class="y-k-navigation-link">Join</a>
+          <li class="y-l-navigation-item">
+            <a href="/#faq" class="y-l-navigation-link">Contact</a>
           </li>
         </ul>
 
-        <div class="y-k-header-button-wrapper">
-          <a href="/" class="y-k-header-icon-title">
+        <div class="y-l-header-button-wrapper">
+          <a href="/" class="y-l-header-icon-title">
             <img
               href="/"
-              class="y-k-title-img"
+              class="y-l-title-img"
               alt="logo"
               src="img/Logo.png"
               style="width: 44px"
             />
           </a>
 
-          <button type="button" class="y-k-header-icon-button" data-menu-button>
+          <button type="button" class="y-l-header-icon-button" data-menu-button>
             <img
-              class="y-k-header-icon y-k-header-icon-menu"
+              class="y-l-header-icon y-l-header-icon-menu"
               src="img/B_Menu.png"
               style="width: 64px"
               alt="menu "
             />
-
             <svg
-              class="y-k-header-icon y-k-header-icon-close"
-              width="65"
+              class="y-l-header-icon y-l-header-icon-close"
+              width="64"
               height="64"
-              viewBox="0 0 65 64"
+              viewBox="0 0 64 64"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <rect x="0.5" width="64" height="64" rx="32" fill="#170F23" />
               <path
-                d="M42.1974 41.6974L22.8025 22.3024"
-                stroke="white"
+                d="M44 40L20 40"
+                stroke="#FCFFFE"
                 stroke-width="2"
                 stroke-linecap="round"
               />
               <path
-                d="M22.8027 41.6974L42.1976 22.3024"
-                stroke="white"
+                d="M44 32L20 32"
+                stroke="#FCFFFE"
+                stroke-width="2"
+                stroke-linecap="round"
+              />
+              <path
+                d="M44 24L20 24"
+                stroke="#FCFFFE"
                 stroke-width="2"
                 stroke-linecap="round"
               />
@@ -104,7 +100,7 @@
 
     <main>
       <section>
-        <div class="y-k-container">
+        <div class="y-l-container">
           <h1>Privacy Policy</h1>
 
           <p>
@@ -146,7 +142,7 @@
             </li>
             <li>
               Company (referred to as either "the Company", "We", "Us" or "Our"
-              in this Agreement) refers to Globzio.
+              in this Agreement) refers to Honey Adventure Puzzle.
             </li>
             <li>
               Cookies are small files that are placed on Your computer, mobile
@@ -177,9 +173,11 @@
               infrastructure itself (for example, the duration of a page visit).
             </li>
             <li>
-              Website refers to Globzio, accessible from
+              Website refers to Honey Adventure Puzzle, accessible from
 
-              <a href="https://globzio.site">globzio.site</a>.
+              <a href="https://honeyadventurepuzzle.com"
+                >honeyadventurepuzzle.com</a
+              >.
             </li>
             <li>
               You means the individual accessing or using the Service, or the
@@ -565,33 +563,52 @@
           <p>
             If you have any questions about this Privacy Policy, You can contact
             us by email:
-            <a href="mailto:info@globzio.site">info@globzio.site</a>
+            <a href="mailto:info@honeyadventurepuzzle.com"
+              >info@honeyadventurepuzzle.com</a
+            >
           </p>
         </div>
       </section>
     </main>
 
-    <footer class="y-k-footer" style="margin: auto">
-      <div class="y-k-footer-container">
-        <div class="y-k-footer-div">
-          <div>
-            <a class="y-k-footer-copyright" href="mailto:info@globzio.site"
-              >info@globzio.site</a
-            >
-            <p class="y-k-footer-copyright">Legal: Limited Liability Company</p>
+    <footer class="y-l-footer" style="margin: auto; background: #4b2400">
+      <div class="y-l-footer-container">
+        <div class="y-l-footer-div">
+          <div class="y-l-footer-d">
+            <div>
+              <p class="y-l-footer-dt">Let’s Connect</p>
+              <p class="y-l-footer-dd">
+                Got feedback, a collaboration idea, or a cozy game you want to
+                share? Reach out!
+              </p>
+            </div>
+            <div>
+              <p class="y-l-footer-copyright">
+                Email:
+
+                <a
+                  class="y-l-footer-copyright"
+                  href="mailto:info@honeyadventurepuzzle.com"
+                  >info@honeyadventurepuzzle.com</a
+                >
+              </p>
+
+              <p class="y-l-footer-copyright">
+                Company Type: Honey Adventure Puzzle is a Limited Liability
+                Company
+              </p>
+            </div>
           </div>
 
-          <div class="y-k-footer-wrapper">
-            <a class="y-k-footer-text" href="/policy.html">Privacy Policy</a>
-            <a class="y-k-footer-text" href="/terms.html"
+          <div class="y-l-footer-wrapper">
+            <a class="y-l-footer-text" href="/policy.html">Privacy Policy</a>
+            <a class="y-l-footer-text" href="/terms.html"
               >Terms and Conditions
             </a>
-            <a class="y-k-footer-text" href="/cookies.html">Cookies Policy</a>
+            <a class="y-l-footer-text" href="/cookies.html">Cookies Policy</a>
           </div>
         </div>
-        <p class="y-k-footer-copyright-two">
-          Copyright: © 2025 globzio.site. All rights reserved.
-        </p>
+        <p class="y-l-footer-copyright-two">© 2025 honeyadventurepuzzle.com</p>
       </div>
     </footer>
     <script src="js/mobile-menu.js"></script>
